fix: FINALLY fix text cropping in dialog

--- a/themes/develop/themes/Freesm-Dark/themeStyle.css
+++ b/themes/develop/themes/Freesm-Dark/themeStyle.css
@@ -1010,6 +1010,10 @@ QRadioButton {
     font-style: normal;
 }
 
+QLabel {
+    min-height: fit-content;
+}
+
 QGroupBox::indicator,
 QMenu::indicator,
 QCheckBox::indicator,
